# subhook-rs

./: Cargo.toml  LICENSE  ORIGINAL_LICENSE  README.md
.cargo/: config.toml
src/: lib.rs
src/arch_86_64_zeex/: mem.rs  mem_windows.rs  mod.rs  subhook.rs  tests.rs
src/arch_86_64_zeex/shared/: jmp.rs  mod.rs  tests.rs
subhook-rs/: Cargo.toml
subhook-rs-macros/: Cargo.toml  README.md
subhook-rs-macros/src/: lib.rs
subhook-rs/src/: error.rs  lib.rs
subhook-rs/src/arch/riscv/subhook/: subhook.rs  tests.rs
subhook-rs/src/arch/riscv/subhook/shared/: hookflags.rs  jmp.rs  mod.rs
subhook-rs/src/arch/x86_fam/subhook/: mod.rs  subhook.rs  tests.rs  vtable.rs
subhook-rs/src/arch/x86_fam/subhook/shared/: hookflags.rs  jmp.rs  mod.rs  tests.rs
subhook-rs/src/common/: scoped_remove.rs
subhook-rs/src/disasm/: mod.rs  riscv.rs  x86_fam.rs
subhook-rs/src/mem/: mod.rs
subhook-rs/src/mem/unix/: libc.rs
subhook-rs/src/mem/windows/: winapi.rs
