[package]
name = "subhook-rs-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for subhook-rs"
license = "BSD-2-Clause"
readme = "README.md"
keywords = []
repository = "https://github.com/EKQRCalamity/subhook-rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
