[package]
name = "subhook-rs"
version = "0.3.3"
edition = "2024"
description = "Rust hooking library for x86 (32 and 64 bit) and RISC-V (32 and 64 bit). Based on subhook from Zeex. Linux was tested but Windows and MacOS should work as well."
license = "BSD-2-Clause"
readme = "../README.md"
keywords = ["hook", "x86", "riscv", "detour"]
repository = "https://github.com/EKQRCalamity/subhook-rs"

[dependencies]
subhook-rs-macros = "1.0.0"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.186", optional = true}

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Kernel",
  "Win32_Foundation"
], optional = true}

[features]
default = ["x86_fam_subhook", "riscv_subhook"]
x86_fam = ["dep:libc", "dep:windows-sys"]
riscv = ["dep:libc", "dep:windows-sys"]
riscv_subhook = ["riscv"]
x86_fam_subhook = ["x86_fam"]
x86_64_Zeex = ["x86_fam_subhook"]
thread_suspend = ["x86_fam_subhook"]

[package.metadata.docs.rs]
targets = [
  "i686-unknown-linux-gnu",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "riscv32imac-unknown-none-elf",
  "riscv64gc-unknown-linux-gnu"
]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
